<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="351dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/spartan_extrabold"
                android:text="@string/home_greeting"
                android:textColor="@color/primary_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="348dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_field_background"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:fontFamily="@font/spartan_extrabold"
                android:hint="Search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGreeting" />

            <GridLayout
                android:id="@+id/servicesGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:rowOrderPreserved="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSearch">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_plumbing"
                            android:src="@drawable/ic_plumbing"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_plumbing"
                        android:textColor="@color/icon_color_dark"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="43dp"
                            android:layout_height="43dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_aircond"
                            android:src="@drawable/ic_aircond"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_aircond"
                        android:textColor="@color/icon_color_dark"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_electrical"
                            android:src="@drawable/ic_electrical"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_electrical"
                        android:textColor="@color/icon_color_dark"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_gas_tank"
                            android:src="@drawable/ic_gas"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_gas_tank"
                        android:textColor="@color/icon_color_dark"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_appliance"
                            android:src="@drawable/ic_appliance"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_appliance"
                        android:textColor="@color/icon_color_dark"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="8dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/service_view_all"
                            android:src="@drawable/ic_view_all"
                            app:tint="@color/icon_color_dark" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/spartan_extrabold"
                        android:text="@string/service_view_all"
                        android:textColor="@color/icon_color_dark"
                        android:textSize="14sp" />
                </LinearLayout>

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled" />

</androidx.constraintlayout.widget.ConstraintLayout>